RbA Build/src/objects/Problem_Component__c.object
<CustomObject>
    <description>The Problem Component code associated to the actual Service Product, filtered based on Service Symptom and Product</description>
    <fields>
        <fullName>Installed_Product__c</fullName>
        <description>Displays the name of the Installed Product for the Service Product</description>
        <formula>Service_Product_lkup__r.Installed_Product_Asset__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the name of the Installed Product for the Service Product</inlineHelpText>
        <label>Installed Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Component_asgn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This adds a Problem Component to the Service Symptom and Service Product. Looks up to &quot;Problem Component Assignment&quot;. The Problem Component Assignment is the junction object between Problem Components and Service Symptoms. This lookup therefore is filtered to show only those Problem Components for the Service Symptom of this product.</description>
        <inlineHelpText>This adds a Problem Component to the Service Symptom and Service Product. Looks up to &quot;Problem Component Assignment&quot;. The Problem Component Assignment is the junction object between Problem Components and Service Symptoms. This lookup therefore is filtere</inlineHelpText>
        <label>Problem Component</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Problem_Component_Config__c.Service_Symptom__c</field>
                <operation>equals</operation>
                <valueField>$Source.Service_Symptom_Validation__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Problem_Component_Config__c</referenceTo>
        <relationshipLabel>Service Requests - Problem Components</relationshipLabel>
        <relationshipName>Problem_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Product_Text__c</fullName>
        <description>For UI Purposes</description>
        <formula>Service_Product_lkup__r.Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Product_lkup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links the Problem Component to the Service Product of the related Service Symptom. Set by code in the backoffice when adding Problem Components.</description>
        <inlineHelpText>Links the Problem Component to the Service Product of the related Service Symptom. Set by code in the backoffice when adding Problem Components.</inlineHelpText>
        <label>Service Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Problem Components</relationshipLabel>
        <relationshipName>Problem_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Symptom_Text__c</fullName>
        <description>For UI Purposes</description>
        <formula>Service_Symptom__r.Service_Symptom__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Symptom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Symptom_Validation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in part to ensure that the Problem Components available are filtered properly so that the Service Symptom on the Problem Component Assignment is equal to the Service Symptom List item.</description>
        <inlineHelpText>Used in part to ensure that the Problem Components available are filtered properly so that the Service Symptom on the Problem Component Assignment is equal to the Service Symptom List item.</inlineHelpText>
        <label>Service Symptom Validation</label>
        <referenceTo>Service_Symptom_List__c</referenceTo>
        <relationshipLabel>Problem Components</relationshipLabel>
        <relationshipName>Problem_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Symptom__c</fullName>
        <description>Links the selected Problem Component code to the selected Service Symptom Code</description>
        <inlineHelpText>Links the selected Problem Component code to the selected Service Symptom Code</inlineHelpText>
        <label>Service Symptom</label>
        <referenceTo>Service_Symptom__c</referenceTo>
        <relationshipLabel>Service Requests - Problem Components</relationshipLabel>
        <relationshipName>Problem_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Problem Component</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{000}</displayFormat>
        <label>Problem Component</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Problem Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>